# OperatorGraph

./: .gitignore  CMakeLists.txt  README.md
auto_tuner/: AnalysisDatabase.py  AutoTuner.py  Configuration.py  DotFileDecorator.py  Enums.py  ParseUtils.py  TestCase.py  auto_tuner.pyproj  auto_tuner.sln  pipeline.xml
auto_tuner/scenes/3d_tree_12_2/: auto_tune_OPTsm.bat  grammar.pga  scene_OPTh.xml  scene_OPThm.xml  scene_OPTs.xml  scene_OPTsm.xml  template.h
auto_tuner/scenes/3d_tree_4_3/: grammar.pga  scene_OPTh.xml  scene_OPThm.xml  scene_OPTs.xml  scene_OPTsm.xml  template.h
auto_tuner/scenes/3d_tree_8_3/: grammar.pga
auto_tuner/scenes/balcony/: scene_OPTh.xml  scene_OPThm.xml  scene_OPTs.xml  scene_OPTsm.xml  template.h
auto_tuner/scenes/commercial/: auto_tune_OPTh.bat  auto_tune_OPThm.bat  scene_OPTh.xml  scene_OPThm.xml  scene_OPTs.xml  scene_OPTsm.xml  template.h
auto_tuner/scenes/mc_skyscraper/: auto_tune_OPTs.bat  grammar.pga  scene_OPTh.xml  scene_OPThm.xml  scene_OPTs.xml  scene_OPTsm.xml  template.h
auto_tuner/scenes/mc_spaceship/: scene_OPTh.xml  scene_OPThm.xml  scene_OPTs.xml  scene_OPTsm.xml  template.h
auto_tuner/scenes/menger_sponge_3/: grammar.pga  scene_OPTh.xml  scene_OPThm.xml  scene_OPTs.xml  scene_OPTsm.xml  template.h
auto_tuner/scenes/suburban_house/: scene_OPTh.xml  scene_OPThm.xml  scene_OPTs.xml  scene_OPTsm.xml  template.h
auto_tuner/scripts/: compile.bat  compile_dependencies.bat  database.sql
auto_tuner/templates/workspace/: PGAFacade.cu
docs/: OLN-PGA-Shape-Grammar.docx
include/pga/compiler/: Axiom.h  CodeGenerator.h  Context.h  DispatchTableGenerator.h  Edge.h  EnumUtils.h  Graph.h  GraphVisitor.h  Logger.h  MatchGroupVisitor.h  Operator.h  OperatorType.h  Parameters.h  Parser.h  PartitionVisitor.h  PhaseVisitor.h  ProcedureList.h  ProcedureListBuilder.cuh  Rule.h  ShapeAttribute.h  ShapeToShapeType.cuh  ShapeType.h  Successor.h  Symbol.h  Vertex.h
include/pga/core/: AABB.cuh  Axis.h  BVH.cuh  BVHTraversal.cuh  BoundingVolumeConstructor.cuh  CPUBVHConstructor.h  CPUBaseContext.h  CPUEvaluator.h  CSVExporter.h  CUDAException.h  CUPTIException.h  CUPTIExporter.h  Call.cuh  ClockCycleCounter.cuh  Collider.cuh  Collision.cuh  ComponentSplit.cuh  ContextSensitivityConstants.cuh  ContextSensitivityDeviceVariables.cuh  Core.h  (+62 more)
src/: CMakeLists.txt
src/compiler/: CMakeLists.txt  CodeGenerator.cpp  Context.cpp  DispatchTableGenerator.cpp  Edge.cpp  Graph.cpp  LineCounter.h  Logger.cpp  Operator.cpp  Parameters.cpp  Parser.cpp  ParserAxiom.h  ParserAxis.cpp  ParserAxis.h  ParserElement.h  ParserExpression.cpp  ParserExpression.h  ParserOperand.cpp  ParserOperand.h  ParserOperator.cpp  ParserOperator.h  ParserParameter.cpp  ParserParameter.h  ParserParameterizedSuccessor.h  ParserProductionRule.cpp  ParserProductionRule.h  ParserRand.cpp  ParserRand.h  ParserRepeatMode.cpp  ParserRepeatMode.h  ParserResult.cpp  ParserResult.h  ParserShapeAttribute.cpp  ParserShapeAttribute.h  ParserSuccessor.h  ParserSymbol.h  ParserTerminal.h  ParserUtils.cpp  ParserUtils.h  ParserVec2.cpp  (+4 more)
src/core/: CMakeLists.txt
src/interpreter/: Axiom.h  CMakeLists.txt  Camera.h  Constants.h  DebugFlags.h  GlobalVariables.cuh  InterpreterApp.cpp  InterpreterApp.h  PGAFacade.cu  PGAFacade.h  interpreter_configuration.xml  main.cpp
src/interpreter/grammars/3d_tree_12_2/: configuration.xml  grammar.pga
src/interpreter/grammars/3d_tree_4_3/: configuration.xml  grammar.pga
src/interpreter/grammars/3d_tree_8_3/: configuration.xml  grammar.pga
src/interpreter/grammars/balcony/: grammar.pga
src/interpreter/grammars/commercial/: configuration.xml  grammar.pga
src/interpreter/grammars/mc_spaceship/: grammar.pga
src/interpreter/grammars/menger_sponge_3/: configuration.xml  grammar.pga
src/interpreter/grammars/suburban_house/: configuration.xml  grammar.pga
src/operator_graph_analyzer/: CMakeLists.txt  CommonGraphOperations.cpp  CommonGraphOperations.h  ConnectionVisitor.cpp  ConnectionVisitor.h  DotGraphVisitor.cpp  DotGraphVisitor.h  HeuristicsTest.cpp  HeuristicsTest.h  OperatorGraphAnalyzerApp.cpp  OperatorGraphAnalyzerApp.h  ParseUtils.cpp  ParseUtils.h  PartitionOutputter.cpp  PartitionOutputter.h  SamplingStrategies.cpp  SamplingStrategies.h  SearchHeuristics.h  main.cpp
src/operator_graph_analyzer/templates/: template-bella-vista-L1.h  template-bella-vista-L3.h  template-bella-vista-M2.h  template-comparison-cityoverview.h  template-comparison-skyscraper.h  template-sierpinski.h  template-siggraph2015-building.h  template-simple-building.h  template-simple-house.h  template-tree2d.h  template.h
src/rendering/: BaseDDS.cpp  BaseDDS.h  CMakeLists.txt  CPUD3DInstancedTriangleMesh.cpp  CPUD3DTriangleMesh.cpp  CPUGLInstancedTriangleMesh.cpp  CPUGLTriangleMesh.cpp  Configuration.cpp  D3DBaseInstancedTriangleMesh.cpp  D3DBaseTriangleMesh.cpp  D3DException.cpp  D3DMaterial.cpp  D3DOBJMesh.cpp  D3DShader.cpp  D3DTexture.cpp  DDSTextureLoader.cpp  GLBaseInstancedTriangleMesh.cpp  GLBaseTriangleMesh.cpp  GLDDS.cpp  GLException.cpp  GLMaterial.cpp  GLOBJMesh.cpp  GLPNG.cpp  GLShader.cpp  GLTexture.cpp  GPUD3DInstancedTriangleMesh.cpp  GPUD3DTriangleMesh.cpp  GPUGLInstancedTriangleMesh.cpp  GPUGLTriangleMesh.cpp  OBJExporter.cpp  PlatformHelpers.h  dxdds.h  pch.h  tiny_obj_loader.cc
src/rendering/shaders/: PGA_Rendering_ColorShader.ps.hlsl  PGA_Rendering_ColorShader.vs.hlsl  PGA_Rendering_TexturedShader.fs.glsl  PGA_Rendering_TexturedShader.ps.hlsl  PGA_Rendering_TexturedShader.vs.glsl  PGA_Rendering_TexturedShader.vs.hlsl  attributes.glsl  camera.glsl  camera.hlsli  lighting.hlsli
src/test_runner/: 3DTree_12_2.cuh  3DTree_4_3.cuh  3DTree_8_3.cuh  Balcony.cuh  CMakeLists.txt  Camera.h  Commercial.cuh  DebugFlags.h  LogManager.h  MC_Skyscrapers.cuh  MC_Spaceship.cuh  MengerSponge.cuh  PGAFacade.cu  PGAFacade.h  SceneSelector.cuh  SceneUtils.cuh  SimpleHouse.cuh  SuburbanHouse.cuh  TestRunnerApp.cpp  TestRunnerApp.h  balcony_configuration.xml  commercial_configuration.xml  main.cpp  mc_skyscrapers_configuration.xml  mc_spaceship_configuration.xml
(+73 files in other folders)
